<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rhythm"
    tools:context=".MainActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/title_iv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/title_image_foreground"
        android:contentDescription="@string/contentDescription"
        app:civ_border_color="@color/dark_purple"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_main"
        android:text="@string/start_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/instructions_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_iv" />

    <Button
        android:id="@+id/instructions_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_main"
        android:text="@string/club100_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_btn" />

    <Button
        android:id="@+id/rate_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_main"
        android:text="@string/rate_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>